assets/css/styles.css
/********* VARIABLES ******/
:root {
  --smallFont: 16px;
  --primary: #173a50;
}

/******** GLOBAL *****/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
/****** FONTS ******/
@font-face {
  font-family: 'circular_regular';
  src: url('../fonts/Circular\ Std\ Book.ttf');
}
@font-face {
  font-family: 'circular_medium';
  src: url('../fonts/Circular\ Std\ Medium.ttf');
}
@font-face {
  font-family: 'circular_bold';
  src: url('../fonts/Circular\ Std\ Black.ttf');
}

/****** FULL PAGE PAGINATIONS ******/
#fp-nav ul li a span,
.fp-slidesNav ul li a span {
  border-radius: 50%;
  position: absolute;
  z-index: 1;
  height: 7px;
  width: 7px;
  border: 0;
  background: white;
  left: 50%;
  opacity: 0.5;
  top: 50%;
  margin: -2px 0 0 -2px;
  transition: all 0.1s ease-in-out;
  transition: 0.5s;
}
.secondpagination {
  background: #ffffff;
  opacity: 0.5;
}
.secondpaginationActive {
  background: #ffffff;
  opacity: 1;
}
#fp-nav ul li a.active span,
#fp-nav ul li:hover a.active span,
.fp-slidesNav ul li a.active span,
.fp-slidesNav ul li:hover a.active span {
  height: 22px;
  width: 7px;
  margin: -8px 0px 0 -2px;
  border-radius: 7px;
  transition: all 0.5s ease-in-out;
  background: white;
  opacity: 1;
}
#fp-nav ul li,
.fp-slidesNav ul li {
  display: block;
  width: 14px;
  height: 13px;
  margin: 15px;
  position: relative;
}

#fp-nav ul li:hover a span,
.fp-slidesNav ul li:hover a span {
  width: 10px;
  height: 10px;
  margin: -5px 0 0 -3px;
}

.index .fp-viewing-2 #fp-nav ul li a span,
.index .fp-viewing-3 #fp-nav ul li a span,
.index .fp-viewing-5 #fp-nav ul li a span {
  background: black;
  opacity: 0.5;
}

.index .fp-viewing-3 #fp-nav ul li a.active span,
.index .fp-viewing-3 #fp-nav ul li a.active span,
.index .fp-viewing-5 #fp-nav ul li a.active span {
  background: black;
  opacity: 1;
}

/********** ANIMATED BG **********/
.animation-bg {
  width: 300%;
  height: 300%;
  transform-origin: top;
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
  background: #53905f;
}
.contact-animation-bg {
  width: 300%;
  height: 300%;
  transform-origin: top;
  z-index: -1;
  position: absolute;
  top: 0;
  right: 50%;
  background: #53905f;
}
@media (max-width: 1000px) {
  .animation-bg {
    display: none;
  }
  .contact-animation-bg {
    display: none;
  }
}

/******* Whatsapp *********/
.whatsapp-container {
  position: fixed;
  bottom: 30px;
  left: 20px;
  direction: ltr !important;
  z-index: 2147482999;
  justify-content: flex-end;
}
[data-balloon] {
  position: relative;
  cursor: pointer;
}
[data-balloon]:after {
  pointer-events: none;
  font-size: 12px !important;
  background: rgba(17, 17, 17, 0.9);
  border-radius: 4px;
  color: #fff;
  content: attr(data-balloon);
  padding: 0.5em 1em;
  position: absolute;
  white-space: nowrap;
  z-index: 10;
  left: 100%;
  margin-left: 11px;
  top: 50%;
  transform: translate(0px, -50%);
}
[data-balloon]:before {
  content: '';
  position: absolute;
  z-index: 10;
  background: no-repeat
    url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http://www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba(17,17,17,0.9)%22%20transform%3D%22rotate(90 6 6)%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E');
  background-size: 100% auto;
  width: 6px;
  height: 18px;
  left: 100%;
  margin-left: 5px;
  top: 50%;
  transform: translate(0px, -50%);
}

/********NAV **********/
nav {
  width: 100%;
  padding: 24px 0px;
  background: white;
  transition: 0.4s;
  position: relative;
  z-index: 100;
}
.nav_inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
nav .links a {
  font-size: var(--smallFont);
  font-family: 'circular_bold';
  padding: 16px;
  text-decoration: none;
  color: var(--primary);
}
.section2active {
  box-shadow: 0px 4px 10px #00000019;
}
@media (max-width: 992px) {
  nav {
    box-shadow: 0px 4px 10px #00000019;
    padding: 10px 0px;
  }
  .nav_inner {
    width: 100% !important;
  }
  .logo img {
    max-width: 80%;
  }
  nav .links a {
    font-size: 12px;
    padding: 6px;
  }
}
@media (max-width: 500px) {
  .log {
    width: 30%;
  }
  .links {
    width: 70%;
  }
  .mob_nav_item {
    display: none;
  }
}

/****** EXPLORE *******/
.explore {
  position: fixed;
  bottom: 50px;
  right: 100px;
}
.explore span:nth-child(1) {
  font-family: 'circular_bold';
  font-size: var(--smallFont);
  color: white;
  transition: 0.5s;
}
.explore span:nth-child(2) {
  border-radius: 50%;
  padding: 8px;
  border: 1.5px solid white;
  margin-left: 6px;
  cursor: pointer;
  transition: 0.5s;
}
.contactexplore {
  position: fixed;
  bottom: 50px;
  right: 100px;
}
.contactexploreBtn {
  border-radius: 50%;
  padding: 8px;
  border: 1.5px solid #222222;
  cursor: pointer;
}
@media (max-width: 992px) {
  .explore {
    display: none;
  }
  .contactexplore {
    display: none;
  }
}

/******** SECTION1 *******/
.section1_col_left h1 {
  font-size: 40px;
  line-height: 60px;
  color: white;
  font-family: 'circular_medium';
}
.section1_col_left p {
  font-size: 18px;
  line-height: 40px;
  color: white;
  font-family: 'circular_regular';
  text-align: justify;
  opacity: 0.7;
}
.apps {
  margin-top: 50px;
}
.apps .download {
  font-size: 18px;
  color: white;
  font-family: 'circular_regular';
  opacity: 0.7;
}
.apps_inner {
  display: flex;
  align-items: center;
  margin-top: 10px;
}
.apps_inner button {
  border: none;
  background: none;
  background: var(--primary);
  border-radius: 22px;
  padding: 10px 20px;
  font-family: 'circular_bold';
  font-size: 16px;
  color: white;
  outline: none;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
  transition: 0.4s;
}
.apps_inner button span:last-child {
  padding-left: 6px;
}
.apps_inner button:hover {
  box-shadow: 0px 16px 16px rgba(0, 0, 0, 0.3);
}
/* ... */

